# pep-msg-api

./: Cargo.toml  docker-compose.yaml  justfile
src/: main.rs  prelude.rs
src/components/users/: mod.rs  prelude.rs
src/components/users/application/use_case/: create_user_case.rs  delete_user_case.rs  get_all_users_case.rs  get_user_by_id_case.rs  mod.rs  update_user_case.rs
src/components/users/domain/: mod.rs
src/components/users/domain/entity/: user.rs
src/components/users/domain/error/: database_error.rs  infrastructure_error.rs  mod.rs  user_not_found_error.rs
src/components/users/domain/value_object/: mod.rs  user_id.rs  username.rs
src/components/users/infrastructure/mongo/: mod.rs  setup.rs  user_model.rs  user_repository.rs
src/components/users/ui/dto/: users.rs
src/components/users/ui/handler/: users.rs
src/shared/: prelude.rs
src/shared/error/: database_write_error.rs  generic.rs  mod.rs
