[package]
name = "pep-msg-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = { version = "1.0.*", features = [] }
mongodb = "2.8.*"
futures-util = "0.3.30"
env_logger = { version = "0.11.0", features = [] }
log = "0.4.20"
